# NYCU-SP-2023-Fall

./: .gitignore  Dockerfile  pyproject.toml  sageenv.Dockerfile
hw0/BabyCrackme/: a.out  baby-crackme  check.cpp  solve.py
hw0/EasyC2/: easy-c2
hw0/ExtremeXorrrrr/: hw0-crypto.py  hw0-crypto_ab70b07183e6d36f.py  secret.py  solve.py
hw1/LFSR/: LFSR.py  LFSR_ecf5c8789be378ca.py  data.py  secret.py  sol.ipynb  sol.py  tmp.data  tmp.py
hw1/Oracle/: Alice_bd234b54edc91a4d.py  Oracle.py  data.py  encrypted_flag_d6fbfd5306695c4a.not_png  secret.py  sol.py
hw1/OracleRevenge/: Alice.py  Oracle_Revenge.py  data.py  secret.py  sol.py  tmp.py
hw10/doubleinjection/: Dockerfile  docker-compose.yml  sol.py  sol2.py
hw10/note/: docker-compose.yml  sol.py  tmp.html
hw2/InvalidCurveAttack/: data.py  elliptic_curve.py  invalid_curve_attack.py  secret.py  sol.sage  sol.sage.py
hw2/SignatureRevenge/: data.py  secret.py  signature_revenge.py  sol.sage  sol.sage.py
hw3/: data.py  sol.py  traces.json
hw3/PowerAnalysis/: sol.py
hw4/: pow.py
hw4/DonutVerifier/: donut-verifier  donut.cpp  help.py  quick-verifier
hw4/SimpleCrackme/: help.py  simple-crackme  sol.py
hw5/BabyRansom/: enc_flag.txt  tmp.py
hw7/Notepad/: backend  flag  notepad  notepad.asm  pow_solver.py  sol.py
hw8/HACHAMA/: Dockerfile  chal.asm  docker-compose.yml  sol.py
lab1/COR/: COR.py  COR_24ff859fd4abd481.py  data.py  secret.py  sol.py
lab1/LSB/: LSB.py  LSB_60b067f6b6dbd2c1.py  secret.py  sol.py  solve.py
lab1/POA/: POA.py  sol.py  (+2 more)
tool/: main_1eef2d2606b37338.py  main_3eeea0ed82a0782d.py
(+161 files in other folders)
