[tool.poetry]
name = "nycu-sp-2023-fall"
version = "0.1.0"
description = ""
authors = ["LolaInTa Chi <lolainta@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
pwntools = "^4.11.0"
pycryptodome = "^3.19.0"
sage = "^0.0.0"
ecdsa = "^0.18.0"
tqdm = "^4.66.1"
numpy = "^1.26.1"
z3 = "^0.2.0"
z3-solver = "^4.12.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
